cabal-version:         2.2
name:                  tasty-req
version:               0.1.0.0
-- synopsis:
-- description:
license:               BSD-3-Clause
license-file:          LICENSE
author:                Ben Sinclair
maintainer:            ben.d.sinclair@gmail.com
copyright:             Copyright (C) 2018 Ben Sinclair
category:              Testing, Web
build-type:            Simple
extra-source-files:    CHANGELOG.md

common lang
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wmissing-export-lists
    -Wredundant-constraints
    -Wtabs
    -Wtype-defaults

common deps
  build-depends:
    base                >= 4.11 && < 4.12,
    bytestring          >= 0.10,
    containers          >= 0.5.11,
    data-default        >= 0.7.1,
    http-client         >= 0.5.13,
    megaparsec          >= 7.0.1,
    mtl                 >= 2.2.2,
    parser-combinators  >= 1.0.0,
    pretty              >= 1.1.3.6,
    pretty-show         >= 1.7,
    req                 >= 1.1.0,
    scientific          >= 0.3.6,
    tasty               >= 1.1.0,
    text                >= 1.2.3,
    transformers        >= 0.5.5,
    transformers-either >= 0.1.1,
    validation          >= 1

library
  import:              lang, deps
  exposed-modules:
    Test.Tasty.Req
    Test.Tasty.Req.Parse
    Test.Tasty.Req.Parse.Common
    Test.Tasty.Req.Parse.JSON
    Test.Tasty.Req.Runner
    Test.Tasty.Req.Types
    Test.Tasty.Req.Verify
  hs-source-dirs:      src

test-suite tests
  import:              lang, deps
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:
    Test.Tasty.Req.Parse.Test
  build-depends:
    tasty-req,
    filepath           >= 1.4.2,
    tasty-golden       >= 2.3.2
